--- a/StudentRegister/StudentRegister/MainWindow.xaml
+++ b/StudentRegister/StudentRegister/MainWindow.xaml
@@ -8,8 +8,34 @@
         Title="MainWindow" Height="450" Width="800">
 
     <DockPanel>
-        <ListBox DockPanel.Dock="Right" Name="StudentList"/>
-        <ContentControl Name="SelectedStudent" />
+        <ListBox DockPanel.Dock="Right" Name="StudentList" ItemsSource="{Binding}" IsSynchronizedWithCurrentItem="True">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Path=Last}" MinWidth="100"/>
+                        <TextBlock Text="{Binding Path=First}" MinWidth="100"/>
+                        <TextBlock Text="{Binding Path=GPA}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <ContentControl Name="SelectedStudent" Content="{Binding}">
+            <ContentControl.ContentTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Width="100" Text="First Name: "/>
+                            <TextBox Width=" 100" Text="{Binding Path=First}"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Width="100" Text="Last Name: "/>
+                            <TextBox Width=" 100" Text="{Binding Path=Last}"/>
+                        </StackPanel>
+                    </StackPanel>
+                </DataTemplate>
+            </ContentControl.ContentTemplate>
+        </ContentControl>
+        <Button Click="AddCourse" Content="Add A Course" DockPanel.Dock="Bottom" VerticalAlignment="Bottom"/>
     </DockPanel>
     
 </Window>
